templates: pre-arrival complete page to fix hotel logo stretching in Safari

--- a/pre_arrival/static/pre_arrival/scss/desktop/complete.scss
+++ b/pre_arrival/static/pre_arrival/scss/desktop/complete.scss
@@ -27,7 +27,10 @@
             }
 
             #hotel-logo {
-                width: 90px;
+                max-width: 90px;
+                max-height: 90px;
+                width: auto;
+                height: auto;
             }
 
             #app-store img {
